--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -113,8 +113,8 @@
   .buttons {
     display: flex;
     align-items: center;
-    width: calc(100% - 30px);
-    padding: 0 15px;
+    width: calc(100% - 60px);
+    padding: 0 30px;
 
     .resume-btn,
     .contact-btn {
