--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -293,8 +293,8 @@
       }
 
       #nav-blank {
+        display: block;
         height: calc(100% - 270px);
-        // margin-top: calc(100vh - 275px);
       }
     }
 
